Update README.md with java and javaFX installation guides